--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,21 +20,21 @@ jobs:
       - name: Install Docker Compose
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker-compose
+          sudo apt-get install -y docker compose
 
       - name: Build and test backend
         run: |
-          docker-compose build backend
-          docker-compose run --rm backend python -m unittest
+          docker compose build backend
+          docker compose run --rm backend python -m unittest
 
       - name: Build and run frontend tests
         run: |
-          docker-compose build frontend
-          docker-compose run --rm frontend npm run test
+          docker compose build frontend
+          docker compose run --rm frontend npm run test
 
       - name: Build all services
         run: |
-          docker-compose build
+          docker compose build
 
       # Optional: Push images to Docker Hub or GHCR here
 
@@ -48,6 +48,6 @@ jobs:
           script: |
             cd HelloFromFlask
             git pull origin main
-            docker-compose down
-            docker-compose build
-            docker-compose up -d
+            docker compose down
+            docker compose build
+            docker compose up -d
