--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,3 +5,6 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
