--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:20-alpine as build
 WORKDIR /app
 COPY package*.json ./
+RUN apt-get update && apt-get install -y nodejs npm
 RUN npm install
 COPY . .
 RUN npm run test   # <-- Add this line to run tests during build
