--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,6 @@
-# frontend/Dockerfile
-FROM node:20-alpine as build
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
+FROM node:20-alpine
 
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+WORKDIR /app
+COPY . .
+RUN npm install
+CMD ["npm", "run", "serve"]
