--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,11 @@
-FROM node:20-alpine
+FROM node:20-alpine as build
 
 WORKDIR /app
-COPY . .
+COPY package*.json ./
 RUN npm install
-CMD ["npm", "run", "serve"]
+COPY . .
+RUN npm run test   # Run tests during build
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
