--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,7 @@
-# frontend/Dockerfile
-FROM node:20-alpine as build
+# backend/Dockerfile
+FROM python:3.11-slim
 WORKDIR /app
-COPY package*.json ./
-
-
-RUN apt-get update && apt-get install -y nodejs npm
-RUN npm install
-
-
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 COPY . .
-RUN npm run test   # <-- Add this line to run tests during build
-RUN npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-
-
-#added to run tests during build
+CMD ["python", "app.py"]
